--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,7 +1,7 @@
 [
     {
       "projectTitle": "Project A",
-      "imageSrc": "projects/project.png",
+      "imageSrc": "projects/projectImage.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["React", "Express", "Node"],
       "source": "https://github.com/nicolasdev97",
@@ -10,7 +10,7 @@
     },
     {
       "projectTitle": "Project B",
-      "imageSrc": "projects/project.png",
+      "imageSrc": "projects/projectImage.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["React", "Express", "Node", "Sass"],
       "source": "https://github.com/nicolasdev97",
@@ -19,7 +19,7 @@
     },
     {
       "projectTitle": "Project C",
-      "imageSrc": "projects/project.png",
+      "imageSrc": "projects/projectImage.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["React", "Express", "Node"],
       "source": "https://github.com/nicolasdev97",
